--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @import "./css/reset.css";
 @import "./css/roboto_font.css";
-@import "./projects/home/home.css";
+@import "./projects/home_page/css/home.css";
 
 /* 
 BREAK POINTS
@@ -10,8 +10,13 @@ md, medium: 900px
 lg, large: 1200px
 xl, extra-large: 1536px
 */
+
+:root {
+  --font-color: #f0f0f0;
+}
+
 html {
   font-family: "Roboto", sans-serif;
   background-color: #151515;
-  color: #f0f0f0;
+  color: var(--font-color);
 }
