--- a/src/projects/home_page/css/projects.css
+++ b/src/projects/home_page/css/projects.css
@@ -9,28 +9,35 @@
 #projects-block__title {
   text-align: center;
   font-size: 1.75rem;
-  /* margin-bottom: 10px; */
+  margin-bottom: 30px;
   /* CSS properties for #projects-block__title */
 }
 
 #projects-block__grid {
-  padding-inline: 10px;
-  padding-block: 20px;
+  margin-inline: 16px;
+  /* background-color: antiquewhite; */
+  display: grid;
+  justify-items: center;
+}
+
+@media screen and (width > 600px) {
+  #projects-block__grid {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+  }
 }
 
 .project-card {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   border-radius: 10px;
-  text-align: center;
-  border: 1px solid #e0e0e0;
   max-width: 300px;
   overflow: hidden;
   color: var(--font-color);
-
+  box-shadow: 5px 1px 5px 1px rgba(0, 0, 0, 0.35);
+  transition: all 0.15s;
+  &:hover {
+    transform: scale(1.025);
+  }
   & a {
     text-decoration: none;
   }
@@ -39,12 +46,17 @@
 .project-card__title {
   font-size: 1.55rem;
   font-weight: 500;
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .project-card__image {
   width: 100%;
-  aspect-ratio: 1 / 1;
-  object-fit: cover;
+  border-radius: 10px;
+  object-fit: contain;
+  top: 0;
   /* border-top-left-radius: 10px; */
   /* border-top-right-radius: 10px; */
 }
@@ -53,8 +65,16 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   gap: 10px;
 }
+
+/* .project-card__desc {
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+} */
 
 .project-card__tag {
   background-color: darkred;
@@ -65,13 +85,15 @@
 
 .project-card__links {
   width: 100%;
-  padding-inline: 40px;
+  padding-inline: 10px;
   margin-bottom: 20px;
+  gap: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   color: brown;
 
-  & > a {
+  & > a:hover {
+    color: rgb(230, 49, 49);
     text-decoration: underline;
   }
 }
