--- a/src/projects/home_page/css/projects.css
+++ b/src/projects/home_page/css/projects.css
@@ -48,6 +48,11 @@
 
   & > .fa-github {
     font-size: 1.25rem;
+    transition: all 0.15s;
+    &:hover {
+      font-size: 1.45rem;
+      color: var(--accent-color);
+    }
   }
 }
 
