add underline to card title on card hover

--- a/src/projects/home_page/css/projects.css
+++ b/src/projects/home_page/css/projects.css
@@ -40,6 +40,9 @@
   & a {
     text-decoration: none;
   }
+  &:hover .project-card__title {
+    text-decoration: underline;
+  }
 }
 .project-card__title-container {
   display: flex;
