--- a/src/projects/home_page/css/projects.css
+++ b/src/projects/home_page/css/projects.css
@@ -5,6 +5,10 @@
 /* #projects-block__container {
  
 } */
+html {
+  background-color: #151515;
+  color: var(--font-color);
+}
 
 #projects-block__title {
   text-align: center;
