Add back btn, add base route constant, style back btn

--- a/src/projects/quote_generator/qg.css
+++ b/src/projects/quote_generator/qg.css
@@ -1,6 +1,4 @@
-@import "/src/css/reset.css";
-@import "/src/css/roboto_font.css";
-@import "./qg.css";
+@import "/src/style.css";
 
 /* 
 BREAK POINTS
