--- a/src/projects/custom_video_player/styles.css
+++ b/src/projects/custom_video_player/styles.css
@@ -1,1 +1,45 @@
 @import "/src/style.css";
+
+main {
+  background-color: wheat;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.screen-container {
+  position: relative;
+  /* background-color: beige; */
+}
+
+.controls {
+  /* background-color: #333; */
+  position: absolute;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+  bottom: 5px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  gap: 10px;
+
+  & .fa-solid {
+    color: #fff;
+    cursor: pointer;
+    font-size: large;
+  }
+
+  & button {
+    background-color: transparent;
+  }
+}
+
+.time-slider {
+  flex: 1;
+}
