--- a/src/projects/custom_video_player/styles.css
+++ b/src/projects/custom_video_player/styles.css
@@ -16,7 +16,7 @@ main {
 }
 
 .controls {
-  /* background-color: #333; */
+  background-color: rgb(51, 51, 51, 0.5);
   position: absolute;
   color: #fff;
   display: flex;
@@ -24,9 +24,7 @@ main {
   align-items: center;
   padding: 10px;
   width: 100%;
-  bottom: 5px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  bottom: 8px;
   gap: 10px;
 
   & .fa-solid {
